2009-12-29  Andreia Gaita  <avidigal@novell.com>

	Initial support for indexed properties, like this[int index]. Only
	getters are supported right now.

	* ScriptableObjectWrapper.cs: Add support for indexed property
	getters via "item" property.
	Add support for accessing Count and Length properties via a
	single "length" property.


2009-12-14  Andreia Gaita  <avidigal@novell.com>

	* ScriptableObjectWrapper.cs: Add manual property "length" mapping to
	ICollection.Count

2009-10-05  Sebastien Pouliot  <sebastien@ximian.com>

	* BrowserInformation.cs: Do not use a catch-all to parse Version. 
	Avoid re-creating the same Version object since it's immutable.
	* HtmlObject.cs: Seal internal class
	* HttpUtility.cs: Remove unused code
	* ScriptableObjectEventInfo.cs: Seal internal class
	* ScriptableObjectWrapper.cs: Avoid multiple casts
	[Found using Gendarme]

	r: rolf

2009-09-30  Sebastien Pouliot  <sebastien@ximian.com>

	* HtmlPage.cs: Add extra CheckHtmlAccess check on Register* 
	methods since they are not needed (i.e. they were not missing)
	and add a comment about the fact. Fix DRT 364 and 365

2009-09-30  Sebastien Pouliot  <sebastien@ximian.com> 

	* HtmlObject.cs, HtmlWindow.cs, ScriptableObjectWrapper.cs,
	ScriptObject.cs: Replace WebApplication by PluginHost.Handle

	r: andreia

2009-09-30  Sebastien Pouliot  <sebastien@ximian.com>

	* HtmlPage.cs: Add missing validations for RegisterCreateableType, 
	UnregisterCreateableType and RegisterScriptableObject. Move 
	storage for them here (from old, 1.1 times, WebApplication).
	* ScriptableObjectWrapper.cs: Use HtmlPage instead of 
	WebApplication. Seal internal types (gendarme).

	r: rolf

2009-09-29  Sebastien Pouliot  <sebastien@ximian.com>

	* HtmlObject.cs: Add missing validations. Throw correct 
	exceptions in Convert

	r: toshok

2009-09-29  Sebastien Pouliot  <sebastien@ximian.com> 

	* HtmlEventArgs.cs: Move critical code into the (already safe 
	critical) caller

	r: rolf
